--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
+<style>
+  .editor,
+  .output {
+    /* Biselado sutil */
+    box-shadow:
+      2px 2px 6px #111a1c,
+      -2px -2px 6px #23272b,
+      inset 1px 1px 2px #23272b,
+      inset -1px -1px 2px #111a1c;
+  }
+  .credit {
+    display: block;
+    text-align: right;
+    font-size: 0.85rem;
+    color: #555a60;
+    opacity: 0.5;
+    margin-top: 2rem;
+    user-select: none;
+    letter-spacing: 0.03em;
+  }
+</style>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
