--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Editor Markdown a Unicode Facebook</title>
+  <title>Editor Markdown a Unicode Facebook (Mejorado)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -67,6 +67,12 @@
       color: #b0b3b8;
       margin-bottom: 0.5rem;
     }
+    .editor-controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
   </style>
 </head>
 <body>
@@ -74,10 +80,16 @@
     <h2 class="mb-4 text-center">Editor Markdown a Unicode Facebook</h2>
     <div class="row g-4">
       <div class="col-md-6">
-        <label for="markdown" class="form-label">Editor Markdown</label>
-        <div id="formatButtons" style="display: none; margin-bottom: 0.5rem;">
-          <button class="copy-btn me-2" onclick="wrapSelectionWithBold()" tabindex="-1">Negritas **</button>
-          <button class="copy-btn" onclick="wrapSelectionWithItalic()" tabindex="-1">Itálicas *</button>
+        <div class="d-flex justify-content-between align-items-center mb-2">
+            <label for="markdown" class="form-label mb-0">Editor Markdown</label>
+        </div>
+        <div class="editor-controls">
+          <button class="copy-btn" onclick="pegarDesdePortapapeles()">Pegar</button>
+          <button class="copy-btn" onclick="limpiarEditor()">Limpiar</button>
+          <div id="formatButtons" style="display: none;">
+            <button class="copy-btn" onclick="wrapSelectionWithBold()" tabindex="-1">Negritas **</button>
+            <button class="copy-btn" onclick="wrapSelectionWithItalic()" tabindex="-1">Itálicas *</button>
+          </div>
         </div>
         <textarea id="markdown" class="editor" placeholder="Escribe o pega tu texto en Markdown aquí..."></textarea>
       </div>
@@ -94,6 +106,23 @@
     const markdownInput = document.getElementById('markdown');
     const outputDiv = document.getElementById('output');
     const formatButtons = document.getElementById('formatButtons');
+
+    function limpiarEditor() {
+      markdownInput.value = '';
+      markdownInput.dispatchEvent(new Event('input'));
+      markdownInput.focus();
+    }
+
+    async function pegarDesdePortapapeles() {
+      try {
+        const text = await navigator.clipboard.readText();
+        markdownInput.value = text;
+        markdownInput.dispatchEvent(new Event('input'));
+        markdownInput.focus();
+      } catch (err) {
+        console.error('No se pudo pegar el texto: ', err);
+      }
+    }
 
     function wrapSelectionWithBold() {
       const start = markdownInput.selectionStart;
@@ -155,12 +184,13 @@
 
     markdownInput.addEventListener('select', () => {
       const hasSelection = markdownInput.selectionStart !== markdownInput.selectionEnd;
-      formatButtons.style.display = hasSelection ? 'block' : 'none';
+      formatButtons.style.display = hasSelection ? 'inline-block' : 'none';
     });
 
     markdownInput.addEventListener('blur', () => {
       setTimeout(() => {
         const active = document.activeElement;
+        // Ocultar botones de formato solo si el foco no está en ellos
         if (!formatButtons.contains(active)) {
           formatButtons.style.display = 'none';
         }
